[gd_scene load_steps=4 format=3 uid="uid://ciqbwud12j4g8"]

[ext_resource type="Texture2D" uid="uid://d4d7yxr0m4p34" path="res://assets/background.png" id="1_hdvsc"]
[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_qax1q"]
[ext_resource type="Theme" uid="uid://cdjvvbt3irciw" path="res://themes/menu.tres" id="3_85cib"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qax1q")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(500, 333.5)
texture = ExtResource("1_hdvsc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 284.0
offset_right = 564.0
offset_bottom = 385.0

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Recommencer"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quitter"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 158.0
offset_right = 632.0
offset_bottom = 229.0
theme = ExtResource("3_85cib")
theme_override_font_sizes/font_size = 40
text = "Score: 0"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
